<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/add_new_customer"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/CustomerName"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_action_customername" />

        <EditText
            android:id="@+id/NameText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Customer_Name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/CustomerCode"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/CustomerName"
        app:layout_constraintStart_toStartOf="@+id/CustomerName"
        app:layout_constraintTop_toBottomOf="@+id/CustomerName">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_action_customercode" />

        <EditText
            android:id="@+id/CodeText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Customer_Code"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/CustomerMobile"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/CustomerCode"
        app:layout_constraintStart_toStartOf="@+id/CustomerCode"
        app:layout_constraintTop_toBottomOf="@+id/CustomerCode">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_action_customermobile" />

        <EditText
            android:id="@+id/MobileText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Customer_Mobile"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/CustomerAddress"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/CustomerMobile"
        app:layout_constraintStart_toStartOf="@+id/CustomerMobile"
        app:layout_constraintTop_toBottomOf="@+id/CustomerMobile">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_action_customeraddress" />

        <EditText
            android:id="@+id/AddressText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Customer_Address"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/updateCoordinates"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomerAddress">
        <Button
            android:id="@+id/coordinatesBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Update_location_Coordinates"
            android:textSize="13dp" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/Location_Coordinates"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@id/CustomerAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/CustomerAddress"
        app:layout_constraintTop_toBottomOf="@+id/updateCoordinates" />

    <LinearLayout
        android:gravity="center"
        android:id="@+id/Coordinates"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <TextView
            android:id="@+id/LatitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="15dp"
            android:text="@string/Location_latitude" />
        <TextView
            android:id="@+id/LongitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:ems="10"
            android:hint="@string/Location_longitude" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/Confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/Coordinates"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/Coordinates"
        app:layout_constraintTop_toBottomOf="@+id/Coordinates">
        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Confirm"
            android:textSize="13dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>